# User_Copylete

./: CMakeLists.txt  README.md  main.cpp
src/files/: copy_paste.cpp  deleter.cpp  gui.cpp  users_lister.cpp
src/headers/: copy_paste.h  deleter.h  gui.h  users_lister.h
